# rtf-to-pdf-converter

rtf_to_pdf_code/: README.md  ak.py  pyproject.toml
rtf_to_pdf_code/operations/: doc_to_pdf.py  marker_remover.py  rtf_to_doc.py  rtf_to_pdf_m.py
rtf_to_pdf_code/rtf_to_pdf/config/: configuration.py  rrr.py  rtf_to_pdf.json
rtf_to_pdf_code/utilities/: __init__.py  common_fun.py
