[project]
name = "rtf_to_pdf"
version = "0.0.1"
authors = [
  { name="Akhilesh Chand", email="akhilesh.chand@carelon.com" },
]
description = "A small example package"
readme = "README.md"
#license = { file="LICENSE" }
dependencies = ['botocore', 'boto3', 'PyPDF2', 'PyMuPDF==1.21.1', 'frontend', 'Spire.Doc', 'striprtf', 'pyth3', 'plum-dispatch==1.5.12']
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "Sipre.Doc"
]
[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"